@@ -109,8 +109,8 @@ if (m_spibus->m_initialized == false) {
 
   // Register mcp2515 specific commands:
   OvmsCommand* cmd_can = MyCommandApp.RegisterCommand("can", "CAN framework");
-  OvmsCommand* cmd_canx = cmd_can->RegisterCommand(name, "CANx framework");
-  cmd_canx->RegisterCommand("setaccfilter", "Set MCP2515 acceptance filter", shell_setaccfilter,
+  m_cmd_canx = cmd_can->RegisterCommand(name, "CANx framework");
+  m_cmd_canx->RegisterCommand("setaccfilter", "Set MCP2515 acceptance filter", shell_setaccfilter,
     "<mask0> <filter0> <filter1> <mask1> <filter2> <filter3> <filter4> <filter5>\n"
     "Specify masks and filters as 32 bit hexadecimal values.\n"
     "All arguments default to 0 = no filter.\n"
@@ -121,6 +121,7 @@ if (m_spibus->m_initialized == false) {
 
 mcp2515::~mcp2515()
   {
+  m_cmd_canx->GetParent()->UnregisterCommand(m_cmd_canx->GetName());
   SetTransceiverMode(CAN_MODE_LISTEN);
   gpio_isr_handler_remove((gpio_num_t)m_intpin);
   spi_bus_remove_device(m_spi);
