@@ -135,6 +135,7 @@ protected:
     uint32_t m_tester_present_timer;
     bool m_extended_wakeup;
     bool m_notify_metrics;
+    bool m_use_swcan_adapter;
 
     OvmsMetricInt * mt_preheat_status;
     OvmsMetricInt *  mt_preheat_timer;
