@@ -9,7 +9,7 @@
 ;    (C) 2011-2017  Mark Webb-Johnson
 ;    (C) 2011       Sonny Chen @ EPRO/DX
 ;    (C) 2019       Marko Juhanne
-;    (C) 2021       Alexander Kiiyashko
+;    (C) 2021       Alexander Kiiashko
 ;
 ; Permission is hereby granted, free of charge, to any person obtaining a copy
 ; of this software and associated documentation files (the "Software"), to deal
@@ -102,6 +102,7 @@ OvmsVehicleVoltAmpera::OvmsVehicleVoltAmpera()
   m_controlled_lights = 0;
   m_startPolling_timer = 0;
   m_pPollingList = NULL;
+  m_use_swcan_adapter = false;
 
   BmsSetCellArrangementVoltage(96, 16);
   BmsSetCellArrangementTemperature(6, 1);
@@ -152,16 +153,24 @@ OvmsVehicleVoltAmpera::OvmsVehicleVoltAmpera()
 
   PollSetPidList(m_can1, m_pPollingList);
   PollSetState(0);
-#ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
-  ESP_LOGI(TAG, "Volt/Ampera vehicle module: Register SWCAN using external CAN module");
-  RegisterCanBus(4,CAN_MODE_ACTIVE,CAN_SPEED_33KBPS);
-  p_swcan = m_can4;
-  p_swcan_if = (swcan*)MyPcpApp.FindDeviceByName("can4");
-#else
-  ESP_LOGI(TAG, "Volt/Ampera vehicle module: Register 2nd MCP2515 as SWCAN");
-  RegisterCanBus(3,CAN_MODE_ACTIVE,CAN_SPEED_33KBPS);  // single wire can
-  p_swcan = m_can3;
-#endif // #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+
+  if(!m_use_swcan_adapter)
+  {
+    ESP_LOGI(TAG, "Register 2nd MCP2515 as SWCAN can3");
+    RegisterCanBus(3, CAN_MODE_ACTIVE,CAN_SPEED_33KBPS);  // single wire can
+    p_swcan = m_can3;
+  }
+  else
+  {
+    // External SWCAN module with MCP2515
+    #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+    ESP_LOGI(TAG, "Register external SWCAN on can4");
+    swcan::Init();
+    RegisterCanBus(4, CAN_MODE_ACTIVE,CAN_SPEED_33KBPS);  // single wire can
+    p_swcan = m_can4;
+    p_swcan_if = (swcan*)MyPcpApp.FindDeviceByName("can4");
+    #endif // #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+  }
 
   // register tx callback
   using std::placeholders::_1;
@@ -204,6 +213,7 @@ void OvmsVehicleVoltAmpera::ConfigChanged(OvmsConfigParam* param)
   m_range_rated_km = MyConfig.GetParamValueInt("xva", "range.km", 0);
   m_extended_wakeup = MyConfig.GetParamValueBool("xva", "extended_wakeup", false);
   m_notify_metrics = MyConfig.GetParamValueBool("xva", "notify_va_metrics", false);
+  m_use_swcan_adapter = MyConfig.GetParamValueBool("xva", "use_swcan_adapter", false);
   }
 
 void OvmsVehicleVoltAmpera::Status(int verbosity, OvmsWriter* writer)
@@ -942,6 +952,8 @@ void OvmsVehicleVoltAmpera::NotifiedVehicleAwake()
 void OvmsVehicleVoltAmpera::CommandWakeupComplete( const CAN_frame_t* p_frame, bool success )
   {
 #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+  if(!m_use_swcan_adapter)
+    return;
   ESP_LOGI(TAG,"CommandWakeupComplete. Success: %d", success);
   // Return from high voltage wakeup mode after wakeup CAN messages have been sent
 
@@ -959,6 +971,8 @@ void OvmsVehicleVoltAmpera::CommandWakeupComplete( const CAN_frame_t* p_frame, b
 OvmsVehicle::vehicle_command_t OvmsVehicleVoltAmpera::CommandWakeup()
   {
 #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+  if(!m_use_swcan_adapter)
+    return NotImplemented;
   CAN_frame_t txframe;
 
   p_swcan_if->SetTransceiverMode(tmode_highvoltagewakeup);
@@ -1035,6 +1049,8 @@ OvmsVehicle::vehicle_command_t OvmsVehicleVoltAmpera::CommandWakeup()
 OvmsVehicle::vehicle_command_t OvmsVehicleVoltAmpera::CommandLock(const char* pin)
   {
 #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+  if(!m_use_swcan_adapter)
+    return NotImplemented;
   CommandWakeup();
 
   CAN_frame_t txframe;
@@ -1065,6 +1081,8 @@ OvmsVehicle::vehicle_command_t OvmsVehicleVoltAmpera::CommandLock(const char* pi
 OvmsVehicle::vehicle_command_t OvmsVehicleVoltAmpera::CommandUnlock(const char* pin)
   {
 #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+  if(!m_use_swcan_adapter)
+    return NotImplemented;
   CommandWakeup();
 
   CAN_frame_t txframe;
