@@ -102,12 +102,6 @@ Peripherals::Peripherals()
   gpio_set_level((gpio_num_t)VSPI_PIN_MCP2515_2_CS, 1); // to prevent SPI crosstalk during initialization
 #endif // #ifdef CONFIG_OVMS_COMP_MCP2515
 
-#ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
-  gpio_set_direction((gpio_num_t)VSPI_PIN_MCP2515_SWCAN_CS, GPIO_MODE_OUTPUT);
-  gpio_set_direction((gpio_num_t)VSPI_PIN_MCP2515_SWCAN_INT, GPIO_MODE_INPUT);
-  gpio_set_level((gpio_num_t)VSPI_PIN_MCP2515_SWCAN_CS, 1); // to prevent SPI crosstalk during initialization
-#endif // #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
-
 #ifdef CONFIG_OVMS_COMP_SDCARD
   gpio_set_direction((gpio_num_t)SDCARD_PIN_CLK, GPIO_MODE_OUTPUT);
   gpio_set_direction((gpio_num_t)SDCARD_PIN_CMD, GPIO_MODE_OUTPUT);
@@ -179,11 +173,8 @@ Peripherals::Peripherals()
 #endif // #ifdef CONFIG_OVMS_COMP_MCP2515
 
 #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
-  ESP_LOGI(TAG, "  can4/swcan (MCP2515 + TH8056 DRIVER)");
-
-  // External SWCAN module with MCP2515. Here we use software CS (maximum 3 HW CS pins already used)
-  m_mcp2515_swcan = new swcan("can4", m_spibus, VSPI_NODMA_HOST, 10000000, VSPI_PIN_MCP2515_SWCAN_CS, VSPI_PIN_MCP2515_SWCAN_INT, false);
-#endif // #ifdef CONFIG_OVMS_COMP_EXTERNAL_SWCAN
+  m_mcp2515_swcan = NULL;
+#endif 
 
 #ifdef CONFIG_OVMS_COMP_SDCARD
   ESP_LOGI(TAG, "  SD CARD");
