@@ -715,7 +715,7 @@ CONFIG_OVMS_COMP_MAX7317=y
 CONFIG_OVMS_COMP_MAX7317_MONITOR_INTERVAL=50
 CONFIG_OVMS_COMP_ESP32CAN=y
 CONFIG_OVMS_COMP_MCP2515=y
-CONFIG_OVMS_COMP_EXTERNAL_SWCAN=
+CONFIG_OVMS_COMP_EXTERNAL_SWCAN=y
 CONFIG_OVMS_COMP_ADC=y
 CONFIG_OVMS_COMP_EXT12V=y
 CONFIG_OVMS_COMP_SERVER=y
